--- a/lsp-transformer.cabal
+++ b/lsp-transformer.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           lsp-transformer
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/lsp-transformer#readme>
-homepage:       https://github.com/githubuser/lsp-transformer#readme
-bug-reports:    https://github.com/githubuser/lsp-transformer/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+homepage:       https://github.com/codedownio/lsp-transformer#readme
+bug-reports:    https://github.com/codedownio/lsp-transformer/issues
+author:         Tom McLaughlin
+maintainer:     tom@codedown.io
+copyright:      2022 Tom McLaughlin
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,12 +21,11 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/lsp-transformer
+  location: https://github.com/codedownio/lsp-transformer
 
 library
   exposed-modules:
       Language.LSP.Transformer
-      Lib
   other-modules:
       Paths_lsp_transformer
   hs-source-dirs:
