--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                lsp-transformer
 version:             0.1.0.0
-github:              "githubuser/lsp-transformer"
+github:              "codedownio/lsp-transformer"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+author:              "Tom McLaughlin"
+maintainer:          "tom@codedown.io"
+copyright:           "2022 Tom McLaughlin"
 
 extra-source-files:
 - README.md
